# expaper

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
expaper/: cli.py  overleaf.py  scaffold.py  tools.py
expaper/templates/: __init__.py  registry.yaml
expaper/templates/paper/blank/: main.tex
expaper/templates/scripts/: run_experiment  snapshot_experiment
scripts/: sync_scripts.py
src/expaper/: __init__.py  overleaf.py  scaffold.py
src/expaper/templates/: __init__.py  registry.yaml
src/expaper/templates/paper/blank/: references.bib
