[project]
name = "expaper"
version = "0.1.0"
description = "Research project scaffolding tool combining experimentStash + Overleaf integration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "cmvcordova" }
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "jinja2>=3.0",
]

[project.scripts]
expaper = "expaper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/expaper"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
